my-apps-disabled/media/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "photos.tuxgrid.com"
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
      matches:
        - path:
            type: PathPrefix
            value: /
